# cpp-template-project

./: CMakeLists.txt  Doxyfile
docs/: CMakeLists.txt  Doxyfile.in
docs/@DOXYGEN_OUTPUT_DIR@/html/: index.html
docs/@DOXYGEN_OUTPUT_DIR@/latex/: refman.tex
docs/@DOXYGEN_OUTPUT_DIR@/xml/: Doxyfile.xml
docs/html/: index.html  md__r_e_a_d_m_e.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  pages_5.js  searchdata.js
docs/latex/: md__r_e_a_d_m_e.tex  refman.tex
docs/source/: conf.py  file_usage.rst  files.rst  index.rst  modules.rst
files/: voru.txt
include/: zipfs.h
src/: CMakeLists.txt  main_zipfs_algorithms.cpp  main_zipfs_containers.cpp
tests/: CMakeLists.txt  zipfs_tests.cpp
